--- a/check.ipynb
+++ b/check.ipynb
@@ -9,20 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pytorch version: 2.3.1\n",
-      "Is MPS (Metal Performance Shader) built? True\n",
-      "Is MPS available? True\n",
-      "Using device: mps\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -43,20 +32,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.3.1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[0.2009, 0.9848, 0.7844, 0.4361],\n",
+       "        [0.1441, 0.8555, 0.5889, 0.0516],\n",
+       "        [0.6998, 0.9999, 0.8347, 0.4471]], device='mps:0')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import torch \n",
-    "print(torch.__version__)"
+    "import torch\n",
+    "\n",
+    "# set the device\n",
+    "device = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
+    "\n",
+    "# create data and send it to the device\n",
+    "x = torch.rand(size=(3,4)).to(device)\n",
+    "x"
    ]
   }
  ],
