--- a/check.ipynb
+++ b/check.ipynb
@@ -9,9 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pytorch version: 2.3.1\n",
+      "Is MPS (Metal Performance Shader) built? True\n",
+      "Is MPS available? True\n",
+      "Using device: mps\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -32,18 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.2009, 0.9848, 0.7844, 0.4361],\n",
-       "        [0.1441, 0.8555, 0.5889, 0.0516],\n",
-       "        [0.6998, 0.9999, 0.8347, 0.4471]], device='mps:0')"
+       "tensor([[0.5538, 0.1099, 0.4531, 0.2246],\n",
+       "        [0.6804, 0.8527, 0.1965, 0.0076],\n",
+       "        [0.5015, 0.8381, 0.6649, 0.1146]], device='mps:0')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
