--- a/check.ipynb
+++ b/check.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Checking MPS (metal performance shader) for apple silicon"
+    "## Checking MPS (metal performance shader) for apple silicon (Pytorch)"
    ]
   },
   {
