--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "20.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11677c0b0>]"
+       "[<matplotlib.lines.Line2D at 0x163d14950>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
