fix bugs & binary classifer

--- a/autograd/model2.ipynb
+++ b/autograd/model2.ipynb
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,8 @@
     "\n",
     "    # update\n",
     "    for p in n.parameters():\n",
-    "        p.data += -0.1 * p.grad\n",
+    "        p.data += -0.1 * p.grad # learning rate means step size\n",
+    "        # how much you want to step away from the gradient\n",
     "\n",
     "    \n",
     "    print(k, loss.data)\n"
