--- a/makemore/makemore_ngram.ipynb
+++ b/makemore/makemore_ngram.ipynb
@@ -1084,6 +1084,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "786adc7e-067f-40ef-acbb-fa8e614d1551",
+   "metadata": {},
+   "source": [
+    "# Neural Network Approach"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 169,
    "id": "4be8aa1a",
