--- a/gpt/gpt_yay.ipynb
+++ b/gpt/gpt_yay.ipynb
@@ -538,9 +538,154 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "934c18c0-7083-4d0b-ab8f-00f20c3c4696",
+   "metadata": {},
+   "source": [
+    "### The mathematical trick in self-attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "99d5cfac-8742-45bc-8a7a-ee0270bbf4c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 2])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# toy example\n",
+    "torch.manual_seed(1337)\n",
+    "\n",
+    "B,T,C = 4,8,2 # batch, time, channels\n",
+    "x = torch.randn(B, T, C)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2b630f4d-806f-474e-9a27-94643da99186",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we want x[b, t] = mean_{i<=t} x[b, i]\n",
+    "xbow = torch.zeros((B, T, C))\n",
+    "for b in range(B):\n",
+    "    for t in range(T):\n",
+    "        xprev = x[b, :t+1] # (t, C)\n",
+    "        xbow[b, t] = torch.mean(xprev, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "410515f2-f26c-49c7-9e45-b28dd2c47c2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 2\n",
+    "wei = torch.tril(torch.ones(T, T))\n",
+    "wei = wei / wei.sum(1, keepdim=True)\n",
+    "xbow2 = wei @ x # (T, T) @ (B, T, C) --> (B, T, C)\n",
+    "torch.allclose(xbow, xbow2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "b24d80f8-9166-4856-9206-d77064905672",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 3: use softmax\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "wei = torch.zeros((T, T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "xbow3 = wei @ x\n",
+    "torch.allclose(xbow, xbow3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "ea18b451-b853-449d-89ef-5669ca9d9a9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 32])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 4: self-attention!\n",
+    "torch.manual_seed(1337)\n",
+    "B, T, C = 4, 8, 32 # batch, time, channels\n",
+    "x = torch.randn(B, T, C)\n",
+    "\n",
+    "# let's see a single Head perform self-attention\n",
+    "head_size = 16\n",
+    "key = nn.Linear(C, head_size, bias=False)\n",
+    "query = nn.Linear(C, head_size, bias=False)\n",
+    "k = key(x)   # (B, T, 16)\n",
+    "q = query(x) # (B, T, 16)\n",
+    "wei = q @ k.transpose(-2, -1) # (B, T, 16) @ (B, 16, T) --> (B, T, T)\n",
+    "\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "#wei = torch.zeros(T, T)\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "\n",
+    "v = value(x) # (B, T, 16)\n",
+    "out = wei @ v (B, T, 16)\n",
+    "\n",
+    "#out = wei @ x\n",
+    "\n",
+    "out.shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18db009b-9107-4168-b031-e29e47f5b2cd",
+   "id": "c8e2dc8d-2ca8-4422-89ac-49a25fe087de",
    "metadata": {},
    "outputs": [],
    "source": []
