multi-head self attention

--- a/gpt/gpt_yay.ipynb
+++ b/gpt/gpt_yay.ipynb
@@ -640,17 +640,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 95,
    "id": "ea18b451-b853-449d-89ef-5669ca9d9a9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([4, 8, 32])"
+       "torch.Size([4, 8, 16])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,6 +665,7 @@
     "head_size = 16\n",
     "key = nn.Linear(C, head_size, bias=False)\n",
     "query = nn.Linear(C, head_size, bias=False)\n",
+    "value = nn.Linear(C, head_size, bias=False)\n",
     "k = key(x)   # (B, T, 16)\n",
     "q = query(x) # (B, T, 16)\n",
     "wei = q @ k.transpose(-2, -1) # (B, T, 16) @ (B, 16, T) --> (B, T, T)\n",
@@ -675,7 +676,7 @@
     "wei = F.softmax(wei, dim=-1)\n",
     "\n",
     "v = value(x) # (B, T, 16)\n",
-    "out = wei @ v (B, T, 16)\n",
+    "out = wei @ v # (B, T, 16)\n",
     "\n",
     "#out = wei @ x\n",
     "\n",
