--- a/gpt/gpt_yay.ipynb
+++ b/gpt/gpt_yay.ipynb
@@ -685,8 +685,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c8e2dc8d-2ca8-4422-89ac-49a25fe087de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61bbb5e5-7bea-42e1-b770-5c89e8fd7380",
    "metadata": {},
    "outputs": [],
    "source": []
