--- a/makemore/3_batchnorm/makemore_mlp2_batchnorm.ipynb
+++ b/makemore/3_batchnorm/makemore_mlp2_batchnorm.ipynb
@@ -846,7 +846,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pytorch-old",
    "language": "python",
    "name": "python3"
   },
